--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,6 @@ h1 {
   font-weight: 600;
 }
 
-
-nav{
-  font-family: 'Nunito', sans-serif;
-}
-
 /* Layout wrapper */
 .page-wrapper {
   max-width: 1100px;
@@ -39,6 +34,7 @@ main.page-wrapper { margin-top: 6rem; }  /* base */
 
 /* Navigation */
 nav{
+  font-family: 'Nunito', sans-serif;
   height: 80px;
   line-height: 40px;
 }
@@ -79,7 +75,7 @@ nav{
 .nav-links ul{
   display: flex;
   align-items: center;
-  gap: 2rem;                 
+  gap: 2.5rem;                 
   list-style: none;          
   margin: 0;
   padding: 0;
@@ -99,15 +95,22 @@ nav{
   border-bottom: 2px solid #fff;
 }
 
-.brand {
-  display: flex;
+.resume-btn {
   align-items: center;
+  justify-content: center;
+  color: #fff;
+  border: 2px solid #fff;
+  font-size: 1.15rem;
+  border-radius: 12px;
+  text-decoration: none;
+  padding: 0 1.25rem;
+  font-weight: 600;
 }
 
-.brand img {
-  height: 54px;
-  width: auto;
-  display: block;
+.resume-btn:hover {
+  background-color: #fff;
+  color:#2C6777;
+  transition: all 0.45s ease-in-out;
 }
 
 /* Main Section */
@@ -238,3 +241,5 @@ nav{
   height: auto;
   pointer-events: none;
 }
+
+ 
