--- a/styles.css
+++ b/styles.css
@@ -479,14 +479,21 @@ nav {
   flex: 1;
   padding-left: 2rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.experience-panel-dates {
+  font-size: 1rem;
+  font-weight: 450;
+  color: #000000;
+  margin: 0 0 0.75rem;
 }
 
 .experience-panel-right ul {
   list-style: disc;
   padding-left: 1.25rem;
   margin: 0;
-
   display: flex;
   flex-direction: column;
   gap: 1.1rem;
