--- a/components/navbar.html
+++ b/components/navbar.html
@@ -6,10 +6,10 @@
       </div>
       <div class="nav-links">
         <ul>
-          <li><a href="index.html" data-page="home">Home</a></li>
-          <li><a href="about.html" data-page="about">About Me</a></li>
-          <li><a href="experience.html" data-page="experience">Experience</a></li>
-          <li><a href="projects.html" data-page="projects">Projects</a></li>
+          <li><a href="./">Home</a></li>
+          <li><a href="about/">About Me</a></li>
+          <li><a href="experience/">Experience</a></li>
+          <li><a href="projects/">Projects</a></li>
         </ul>
       </div>
     </div>
