--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -5,10 +5,10 @@
   </div>
   <nav class="nav-sidebar-nav" aria-label="Mobile navigation">
     <ul>
-      <li><a href="index.html" data-page="home">Home</a></li>
-      <li><a href="about.html" data-page="about">About Me</a></li>
-      <li><a href="experience.html" data-page="experience">Experience</a></li>
-      <li><a href="projects.html" data-page="projects">Projects</a></li>
+      <li><a href="./">Home</a></li>
+      <li><a href="about/">About Me</a></li>
+      <li><a href="experience/">Experience</a></li>
+      <li><a href="projects/">Projects</a></li>
     </ul>
   </nav>
   <a class="nav-sidebar-resume" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
